# quatex

./: .gitignore  README.md  build.lua  pyproject.toml  texjam.toml  texjam.yaml
code/: quatex-environment.dtx  quatex-layout.dtx  quatex-math.dtx  quatex-reference.dtx  quatex.dtx  quatex.ins
plugins/: module.py
src/(((project_slug)))/: (((filename))).tex  .gitignore  .latexmkrc
src/(((project_slug)))/preamable/: main.tex  meta.tex
src/(((project_slug)))/preamable/environment/: envs.tex  main.tex  styles.tex
src/(((project_slug)))/preamable/layout/: colors.tex  cover.tex  header.tex  heading.tex  main.tex  matter.tex  toc.tex
src/(((project_slug)))/preamable/reference/: biblatex.tex  citation.tex  linkbox.tex  main.tex
src/(((project_slug)))/preamble/: main.tex  meta.tex
src/(((project_slug)))/preamble/citation/: biblatex.tex  cite.tex  doi-eprint-url.tex  fields.tex  main.tex  styles.tex
src/(((project_slug)))/preamble/environment/: envs.tex  floats.tex  main.tex  styles.tex
src/(((project_slug)))/preamble/font/: main.tex
src/(((project_slug)))/preamble/layout/: cover.tex  geometry.tex  header.tex  heading.tex  main.tex  toc.tex  typeset.tex
src/(((project_slug)))/preamble/math/: equation.tex  font.tex  macros.tex  main.tex  tikz.tex
src/(((project_slug)))/preamble/reference/: citation.tex  colors.tex  hyperref.tex  linkbox.tex  main.tex  reference.tex
src/(((project_slug)))/preamble/user/: macros.tex  main.tex  packages.tex  styles.tex
