[project]
name = "quatex"
version = "0.1.0"
description = "LaTeX template by Quaerent"
authors = [
    {name = "Quaerent",email = "topfyf@qq.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "texjam (>=0.5.0,<0.6.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.10,<0.15.0)"
]
